--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "com.jdkgroup.mykotlin"
+        applicationId "com.jdkgroup.myapplication"
         minSdkVersion 26
         targetSdkVersion 26
         versionCode 1
@@ -21,24 +20,29 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.+'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:26.+'
+
 
     // API Calling
     /*For connection */
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    compile "io.reactivex:rxjava:$RX_JAVA_VERSION"
-    compile "io.reactivex:rxandroid:$RX_ANDROID_VERSION"
-    compile "com.jakewharton.rxbinding:rxbinding:$RXBINDING"
-    compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-    compile "com.squareup.retrofit2:adapter-rxjava:$RETROFIT_VERSION"
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit-converters:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.amitshekhar.android:rx2-android-networking:1.0.0'
 
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
@@ -46,6 +50,6 @@ dependencies {
     //sdp
     compile 'com.intuit.sdp:sdp-android:1.0.4'
 
-    compile "com.jakewharton:butterknife:$BUTTER_KNIFE_VERSION"
-    apt "com.jakewharton:butterknife-compiler:$BUTTER_KNIFE_VERSION"
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
