--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.jdkgroup.retrofitmvp3.baseclasses.BaseApplication"
+        android:name="com.jdkgroup.rxjava2mvp.baseclasses.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.jdkgroup.retrofitmvp3.ActivityRetrofitMVP3">
+        <activity android:name="com.jdkgroup.rxjava2mvp.ActivityRetrofitMVP3">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
